---
source: zellij-client/src/old_config_converter/./unit/convert_layout_tests.rs
assertion_line: 101
expression: "format!(\"{}\", kdl_config)"
---
layout {
    default_tab_template {
        children
    }
    tab split_direction="Horizontal" {
        pane size=1 borderless=true {
            plugin location="swarm:tab-bar"
        }
        pane split_direction="Vertical" {
            pane split_direction="Vertical" {
                pane command="htop" size="50%"
                pane command="htop" size="50%" {
                    args "-C" "--tree"
                }
            }
        }
        pane size=5
        pane size=2 borderless=true {
            plugin location="swarm:status-bar"
        }
    }
}
